Refactor TypeScript configurations and components for improved structure and functionality. Updated `tsconfig.backend.json` to include additional directories, modified `AgentCard` to remove unused props, and streamlined error handling in various components. Enhanced `ChatArea` with project creation prompts and integrated Google integration hints. Updated email and leads utility functions for clarity. Added `useCallback` for performance optimization in `ModelConfigDialog` and adjusted image handling in chat components.

--- a/tsconfig.backend.json
+++ b/tsconfig.backend.json
@@ -2,11 +2,10 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "dist-backend",
-    "rootDir": "src/backend",
     "noEmit": false,
     "module": "NodeNext",
     "moduleResolution": "NodeNext"
   },
-  "include": ["src/backend/**/*"],
+  "include": ["src/backend/**/*", "src/db/**/*", "src/lib/**/*", "src/utils/**/*"],
   "exclude": ["node_modules"]
 }
