Fix TypeScript config and code quality issues
- Fix backend TypeScript config: remove rootDir restriction to allow imports from @/db, @/lib, @/utils
- Fix all ESLint warnings:
  - Remove unused parameters (prefix with _ where needed)
  - Replace <img> with Next.js Image component
  - Fix useEffect dependencies in model-config-dialog
  - Remove unused variables and imports
  - Remove unused get parameters from Zustand stores

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@
 # Google OAuth (Integrations)
 # GOOGLE_CLIENT_ID=
 # GOOGLE_CLIENT_SECRET=
-# GOOGLE_REDIRECT_URI=http://localhost:3000/api/integrations/google/callback
+# GOOGLE_REDIRECT_URI=http://localhost:6001/api/integrations/google/callback
 
 # SendGrid
 # SENDGRID_API_KEY=
@@ -41,3 +41,11 @@
 # GOOGLE_CUSTOM_SEARCH_ENGINE_ID=
 # Or Serper: https://serper.dev (2,500 free queries/month)
 # SERPER_API_KEY=
+
+# Ollama (when OPENAI_API_KEY is not set). Default: http://localhost:11434
+# OLLAMA_HOST=http://localhost:11434
+# OLLAMA_MODEL=llama3.2
+
+# Running on two PCs: use local Ollama on each PC so they don't share one instance.
+# On each PC leave OLLAMA_HOST unset or set to http://localhost:11434. Do not point
+# both apps at the same Ollama (e.g. one PC's IP) or that Ollama may be overloaded.
